# flexsense-guard

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE_NOTICE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  task.yml
.github/workflows/: python-ci.yml
00_docs/: README.md  experiment_protocol.md  feasibility_probe_72h.md  git_workflow.md  interface_spec.md  issue_backlog.md  project_charter.md  risk_register.md  scope_and_non_goals.md  system_architecture.md  team_responsibilities.md
01_plant/matlab/: flex_joint_default_params.m  flex_joint_dynamics.m  generate_probe_scenarios.m  simulate_flex_joint.m
01_plant/parameters/: heavy_load.json  light_load.json  medium_load.json
01_plant/simulink/: README.md
01_plant/tests/: test_plant_smoke.m
02_observer/baselines/: motor_side_mapping.m  simple_disturbance_estimator.m
02_observer/matlab/: augmented_ekf_init.m  augmented_ekf_step.m  observer_default_config.m
05_control/: mode_manager.m
07_app/: README.md
08_sil/: README.md
configs/: README.md
docs/: API_SPEC.md  PROBE_72H.md  PROJECT_CHARTER.md  README.md  SYSTEM_ARCHITECTURE.md  current_status_and_next_steps.md  decision_log.md  experiment_protocol.md  feasibility_probe_72h.md  git_workflow.md  interface_spec.md  issue_backlog.md  probe_results.md  project_charter.md  risk_register.md  scope_and_non_goals.md  system_architecture.md  team_responsibilities.md
results/: README.md
scripts/: run_p1_feasibility_probe.m  run_probe.m  setup_project.m
(+115 files in other folders)
