[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flexsense-guard"
version = "0.1.0"
description = "无负载侧传感器的机器人柔性关节可信虚拟力觉与安全控制仿真系统"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
    "pytest>=7.0",
]
authors = [
    { name = "FlexSense-Guard 项目组" },
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
